syntax = "proto3";

package types;

service TypeService {
	// 获取单个帮助文档类型
	rpc FindType(FindTypeRequest) returns (FindTypeResponse) {}
	// 获取多个帮助文档类型
	rpc FindTypes(FindTypesRequest) returns (FindTypesResponse) {}
	// 添加帮助文档类型
	rpc AddType(AddTypeRequest) returns (AddTypeResponse) {}
	// 更新帮助文档类型
	rpc ModifyType(ModifyTypeRequest) returns (ModifyTypeResponse) {}
	// 硬删除帮助文档类型
	rpc DeleteType(DeleteTypeRequest) returns (DeleteTypeResponse) {}
	// 硬删除多个帮助文档类型
	rpc DeleteTypes(DeleteTypesRequest) returns (DeleteTypesResponse) {}
}

// 帮助文档类型
message Type {
	string type_id = 1; // 类型ID
	string type_name = 2; // 类型名称
	string show = 3; // 是否显示在帮助概览画面
	string icon = 4; // 类型图标
	string lang_cd = 5; // 登录语言代号
	string created_at = 6; // 创建时间
	string created_by = 7; // 创建者
	string updated_at = 8; // 更新时间
	string updated_by = 9; // 更新者
}

message FindTypeRequest{
	string type_id = 1; // 类型ID
	string database = 2; // 数据库
}

message FindTypeResponse{
	Type type = 1;
}

message FindTypesRequest{
	string type_name = 1; // 类型名称
	string show = 2; // 是否显示在帮助概览画面
	string lang_cd = 3; // 登录语言代号
	string is_dev = 4; // dev区分
	string database = 5; // 数据库
}

message FindTypesResponse{
	repeated Type types = 1;
}

message AddTypeRequest{
	string type_id = 1; // 类型ID
	string type_name = 2; // 类型名称
	string show = 3; // 是否显示在帮助概览画面
	string icon = 4; // 类型图标
	string lang_cd = 5; // 登录语言代号
	string writer = 6; // 登录者
	string database = 7; // 数据库
}

message AddTypeResponse{
	string type_id = 1; // 类型ID
}

message ModifyTypeRequest{
	string type_id = 1; // 类型ID
	string type_name = 2; // 类型名称
	string show = 3; // 是否显示在帮助概览画面
	string icon = 4; // 类型图标
	string lang_cd = 5; // 登录语言代号
	string writer = 6; // 更新者
	string database = 7; // 数据库
}

message ModifyTypeResponse{
}

message DeleteTypeRequest{
	string type_id = 1; // 类型ID
	string database = 2; // 数据库
}

message DeleteTypeResponse{
}

message DeleteTypesRequest{
	repeated string type_id_list = 1; // 类型ID集合
	string database = 2; // 数据库
}

message DeleteTypesResponse{
}
